projects/vb6parse/snapshots/syntax/statements/system_interaction/savesetting/savesetting_in_function.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/savesetting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: FunctionStatement
      children:
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: StoreSettings
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: BooleanKeyword
          text: Boolean
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SaveSettingStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SaveSettingKeyword
                  text: SaveSetting
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"MyApp\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Config\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Version\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"1.0\""
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: StoreSettings
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: BooleanLiteralExpression
                  children:
                    - kind: TrueKeyword
                      text: "True"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
